--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Williams & Shirry Construction</title>
+  <title>Construction</title>
   <style>
     :root { --header-h: 60px; }
 
@@ -172,7 +172,7 @@
 
   <!-- Footer -->
   <footer>
-    <div>© 2025 Williams & Shirry Construction</div>
+    <div>© 2025 Construction</div>
     <div class="links">
       <a href="#about">About Us</a>
       <a href="#projects">Projects</a>
@@ -234,3 +234,4 @@
   </script>
 </body>
 </html>
+
