--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <!-- Header -->
   <header class="header" id="siteHeader">
     <nav class="nav">
-      <a href="#" class="logo">WILLIAMS & SHIRRY</a>
+      <a href="#" class="logo">FIDILITY CONTRUCTION</a>
       <div class="menu">
         <a href="#about">About Us</a><span>|</span>
         <a href="#projects">Projects</a><span>|</span>
@@ -234,4 +234,5 @@
   </script>
 </body>
 </html>
+
 
