--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </video>
       <div class="overlay">
         <div>
-          <h1 id="brandTitle">Williams and Shirry Construction</h1>
+          <h1 id="brandTitle">Fidility Construction</h1>
           <div class="tagline">Quality and Care in Construction</div>
         </div>
       </div>
@@ -234,6 +234,7 @@
   </script>
 </body>
 </html>
+
 
 
 
